base template to test

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>SAML/OAuth 2 test</h1>
+    <h1>SAML/OAuth 2 testing</h1>
     <% if (!user) { %>
       <div class="section">
         <p>Welcome! Please <a href="/saml/login">log in</a>.</p>
